Implemented Products CSS in dashboard

--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -49,9 +49,11 @@
 }
 
 /* font-sizes in px's */
-
-.font-size-100 {
-  font-size: 100px !important;
+.font-size-18 {
+  font-size: 18px !important;
+}
+.font-size-20 {
+  font-size: 20px !important;
 }
 
 .font-size-45 {
