--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,14 @@
 html, body { height: 100%; }
 body,p { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+@import './assets/styles/variables.scss';
+
+.noselect {
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Old versions of Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome, Opera and Firefox */
+  }
