--- a/src/app/shared/shared/components/topbar/topbar.component.html
+++ b/src/app/shared/shared/components/topbar/topbar.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-lg nav fixed-top">
   <div class="container d-flex justify-content-between w-100">
     <ul class="navbar-nav mr-auto d-flex justify-content-between">
-      <li class="nav-item active pointer">
+      <li class="nav-item pointer">
         <p class="navbar-brand m-b-0 noselect" [routerLink]="['/dashboard']" routerLinkActive="active">Home</p>
       </li>
       <li class="nav-item pointer">
-        <p class="navbar-brand m-b-0 noselect">Products</p>
+        <p class="navbar-brand m-b-0 noselect" [routerLink]="['/products']" routerLinkActive="active">Products</p>
       </li>
     </ul>
     <div>
