--- a/src/app/views/products/products.component.html
+++ b/src/app/views/products/products.component.html
@@ -1,9 +1,35 @@
-<div class="container m-t-65">
-  <div>
-    
+<div class="d-flex m-t-20 justify-content-end acordian">
+  <p>
+    <i class="fa fa-filter" aria-hidden="true" (click)="isCollapsed = !isCollapsed"
+    [attr.aria-expanded]="!isCollapsed" aria-controls="collapseExample"></i>
+  </p>
+</div>
+
+<div id="collapseExample" [ngbCollapse]="isCollapsed">
+  <div class="d-flex flex-wrap justify-content-center align-items-center filters-styling">
+    <div class="m-r-10 w-18rem">
+      <label>Catogery</label>
+      <select class="form-control">
+        <option selected>All</option>
+        <option>Black Choclates</option>
+        <option>Dark Choclates</option>
+        <option>White Choclates</option>
+      </select>
+    </div>
+    <div class="m-r-10 w-18rem">
+      <label>Price Range: </label>
+      <select class="form-control">
+        <option selected>All</option>
+        <option>Black Choclates</option>
+        <option>Dark Choclates</option>
+        <option>White Choclates</option>
+      </select>
+    </div>
   </div>
 </div>
-<div class="d-flex flex-wrap  justify-content-center align-items-center products">
+
+
+<div class="d-flex flex-wrap  justify-content-center align-items-center m-t-20">
   <ng-container *ngFor="let product of products">
     <div class="card m-r-15 m-b-15" style="width: 18rem;">
       <div class="card-body">
