--- a/src/app/views/products/products.component.scss
+++ b/src/app/views/products/products.component.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .products {
     margin-top: 80px;
 }
@@ -17,4 +19,32 @@
 
 .no-stock .fa-circle {
     color: red;
+}
+
+.filters {
+    width: 286px;
+}
+
+.w-18rem {
+    width: 18rem;
+}
+
+.filters-styling {
+    background-color: $light-grey;
+    padding-bottom: 20px;
+    padding-top: 20px;
+}
+.acordian {
+    background-color: $light-grey;
+}
+
+.fa-filter {
+    font-size: 30px;
+    padding-top: 10px;
+}
+
+.card {
+//     -webkit-box-shadow: 1px 1px 2px 0px rgba(0,0,0,0.75);
+// -moz-box-shadow: 1px 1px 2px 0px rgba(0,0,0,0.75);
+// box-shadow: 1px 1px 2px 0px rgba(0,0,0,0.75);
 }
