--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,9 @@
 html, body { height: 100%; }
 body,p { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-@import './assets/styles/variables.scss';
+@import "variables";
 
-.noselect {
+label, p, h1, h2, h3,h4,h5,h6,i,.noselect {
     -webkit-touch-callout: none; /* iOS Safari */
       -webkit-user-select: none; /* Safari */
        -khtml-user-select: none; /* Konqueror HTML */
