--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,6 @@
-<<<<<<< HEAD
-<!-- <h1>this is workigng</h1> -->
+<app-topbar>
 
-<div>
-    <h1>login form </h1>
-    <form>
-        <input type="text" placeholder="username or email">
-
-        <br>
-        <input type="password" placeholder="password">
-        <br>
-        <button type="submit" class="btn btn-primary">login</button>
-    </form>
-</div>
-=======
-
-<app-topbar></app-topbar>
+</app-topbar>
 <div class="m-t-50">
     <router-outlet></router-outlet>
 </div>
->>>>>>> 6bc7d98f542848d7586d8e4e80db306bc51728d5
