--- a/src/app/views/admin-views/products/products.component.html
+++ b/src/app/views/admin-views/products/products.component.html
@@ -30,7 +30,7 @@
 
 
 <div class="d-flex flex-wrap  justify-content-center align-items-center m-t-20">
-  <ng-container *ngFor="let product of products">
+  <ng-container *ngFor="let product of products; let i = index">
     <div class="card m-r-15 m-b-15" style="width: 18rem;">
       <div class="card-body">
         <img [src]="product.imageURL" height="175" width="250">
@@ -39,10 +39,10 @@
           <h6 class="card-subtitle mb-2 text-muted"><span> &#8377;</span>{{product.cost}}</h6>
         </div>
         <div class="d-flex justify-content-start">
-          <ng-container *ngFor="let rate of [].constructor(product.productCount)">
+          <ng-container *ngFor="let rate of [].constructor(product.rating)">
             <i class="fa fa-star" aria-hidden="true"></i> &nbsp;
           </ng-container>
-          <ng-container *ngFor="let rate of [].constructor(5 - product.productCount)">
+          <ng-container *ngFor="let rate of [].constructor(5 - product.rating)">
             <i class="fa fa-star-o" aria-hidden="true"></i> &nbsp;
           </ng-container>
         </div>
@@ -57,10 +57,13 @@
               No Stock
             </p>
           </div>
-          <div>
-            <i class="fa fa-minus-square-o font-size-18 pointer" aria-hidden="true"></i>&nbsp;
-            <i class="fa fa-plus-square-o font-size-18 pointer" aria-hidden="true"></i>&nbsp;
+          <div class="position-relative">
+            <i class="fa fa-minus-square-o font-size-18 pointer" aria-hidden="true" [ngClass]="product.productCount <= 0 ? 'disabled' : ''" (click)="decrementProductCount(product, i)"></i>&nbsp;
+            <i class="fa fa-plus-square-o font-size-18 pointer" aria-hidden="true" (click)="incrementProductCount(product, i)"></i>&nbsp;
             <i class="fa fa-shopping-cart font-size-20 pointer" aria-hidden="true"></i>
+            <div class="d-flex justify-content-center cart-count">
+              {{product.productCount}}
+            </div>
           </div>
         </div>
       </div>
