--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,8 @@ label, p, h1, h2, h3,h4,h5,h6,i,.noselect {
               user-select: none; /* Non-prefixed version, currently
                                     supported by Chrome, Opera and Firefox */
   }
+
+  .disabled {
+    opacity: 0.5;
+    pointer-events: none;
+  }
