--- a/src/app/shared/shared/components/topbar/topbar.component.html
+++ b/src/app/shared/shared/components/topbar/topbar.component.html
@@ -11,8 +11,11 @@
     <div>
       <p class="navbar-brand pointer"><i class="fa fa-user" aria-hidden="true"></i>
         <span class="m-l-5 noselect">My Account</span></p>
-      <p class="navbar-brand pointer"><i class="fa fa-shopping-cart" aria-hidden="true"></i>
-        <span class="m-l-5 noselect">Cart</span></p>
+      <p class="navbar-brand pointer position-relative">
+        <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+        <span class="m-l-5 noselect">Cart</span>
+        <span class="cart-count">{{totalCartCount}}</span>
+      </p>
     </div>
   </div>
 </nav>
