--- a/src/app/shared/shared/components/topbar/topbar.component.scss
+++ b/src/app/shared/shared/components/topbar/topbar.component.scss
@@ -20,3 +20,18 @@
     color: darkgrey;
     text-decoration: underline;
 }
+
+.cart-count {
+    background-color: #ff7e00;
+    color: white;
+    border-radius: 50%;
+    width: 18px;
+    height: 18px;
+    font-size: 10px;
+    position: absolute;
+    top: -6px;
+    right: -16px;
+    padding: 1px;
+    text-align: center;
+    font-weight: bold;
+}
