--- a/src/app/views/admin-views/products/products.component.html
+++ b/src/app/views/admin-views/products/products.component.html
@@ -61,7 +61,7 @@
             <i class="fa fa-minus-square-o font-size-18 pointer" aria-hidden="true" [ngClass]="product.productCount <= 0 ? 'disabled' : ''" (click)="decrementProductCount(product, i)"></i>&nbsp;
             <i class="fa fa-plus-square-o font-size-18 pointer" aria-hidden="true" (click)="incrementProductCount(product, i)"></i>&nbsp;
             <i class="fa fa-shopping-cart font-size-20 pointer" aria-hidden="true"></i>
-            <div class="d-flex justify-content-center cart-count">
+            <div class="d-flex justify-content-center cart-count" *ngIf="product.productCount > 0">
               {{product.productCount}}
             </div>
           </div>
