login,forgot and register forms created

--- a/src/app/views/auth-views/login/login.component.html
+++ b/src/app/views/auth-views/login/login.component.html
@@ -1,10 +1,31 @@
-<form>
-    <div class="form-group">
-        <label for="formGroupExampleInput">Example label</label>
-        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input">
+<div class="d-flex flex-wrap  justify-content-center align-items-center">
+    <div class="card m-t-50" style="width: 22rem;">
+        <div class="card-body">
+            <div class="d-flex flex-wrap  justify-content-center align-items-center">
+                <p style="font-size: medium;">Login</p>
+            </div>
+            <form>
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Email </label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Password</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1">
+                </div>
+                <div class="d-flex justify-content-start">
+                    <a href="registration" class="btn btn-link ">Registration</a>
+                    <div class="d-flex justify-content-end">
+                        <a href="forgotpassword" class="btn btn-link">Forgot Password?</a>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-end">
+                    <button type="submit" class="btn btn-outline-success">login</button>
+                </div>
+            </form>
+
+        </div>
+
+
     </div>
-    <div class="form-group">
-        <label for="formGroupExampleInput2">Another label</label>
-        <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
-    </div>
-</form>
+</div>
