--- a/src/app/views/auth-views/forgot-password/forgot-password.component.html
+++ b/src/app/views/auth-views/forgot-password/forgot-password.component.html
@@ -1,1 +1,21 @@
-<p>forgot-password works!</p>
+<div class="d-flex flex-wrap  justify-content-center align-items-center">
+    <div class="card m-t-50" style="width: 22rem;">
+        <div class="card-body">
+            <div class="d-flex flex-wrap  justify-content-center align-items-center">
+                <p style="font-size: medium;">Forgot Password</p>
+            </div>
+            <form>
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Email </label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <div class="d-flex justify-content-end">
+                    <button type="submit" class="btn btn-outline-primary">Send Password</button>
+                </div>
+            </form>
+
+        </div>
+
+
+    </div>
+</div>
