--- a/src/app/views/auth-views/registration/registration.component.html
+++ b/src/app/views/auth-views/registration/registration.component.html
@@ -1,1 +1,44 @@
-<p>registration works!</p>
+<div class="d-flex flex-wrap  justify-content-center align-items-center">
+    <div class="card m-t-50" style="width: 22rem;">
+        <div class="card-body">
+            <div class="d-flex flex-wrap  justify-content-center align-items-center">
+                <p style="font-size: medium;">Registration</p>
+            </div>
+            <form>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Fullname</label>
+                    <input type="password" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Email </label>
+                    <input type="email" class="form-control" aria-describedby="emailHelp">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">phonenumber</label>
+                    <input type="number" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">password</label>
+                    <input type="password" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">conform Password</label>
+                    <input type="password" class="form-control">
+                </div>
+                <div>
+                    <input type="checkbox" />
+                    <label>I agree with terms & conditions</label>
+
+
+                </div>
+
+                <div class="d-flex justify-content-end">
+                    <button type="submit" class="btn btn-primary">Register</button>
+                </div>
+            </form>
+
+        </div>
+
+
+    </div>
+</div>
