--- a/src/app/views/auth-views/forgot-password/forgot-password.component.html
+++ b/src/app/views/auth-views/forgot-password/forgot-password.component.html
@@ -9,8 +9,16 @@
                     <label for="exampleInputEmail1">Email </label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
+                <div class="d-flex justify-content-between">
+                    <div class="d-flex justify-content-start">
+                        <a [routerLink]="['../login']" class="btn btn-link ">Login</a>
+                    </div>
+                    <div class="d-flex justify-content-start">
+                        <a [routerLink]="['../registration']" class="btn btn-link ">Registration</a>
+                    </div>
+                </div>
                 <div class="d-flex justify-content-end">
-                    <button type="submit" class="btn btn-outline-primary">Send Password</button>
+                    <button type="submit" class="btn btn-primary">Send Password</button>
                 </div>
             </form>
 
