--- a/src/app/views/auth-views/registration/registration.component.html
+++ b/src/app/views/auth-views/registration/registration.component.html
@@ -6,7 +6,7 @@
             </div>
             <form>
                 <div class="form-group">
-                    <label for="exampleInputPassword1">Fullname</label>
+                    <label for="exampleInputPassword1">Full Name</label>
                     <input type="password" class="form-control">
                 </div>
                 <div class="form-group">
@@ -14,22 +14,24 @@
                     <input type="email" class="form-control" aria-describedby="emailHelp">
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputPassword1">phonenumber</label>
+                    <label for="exampleInputPassword1">Phone Number</label>
                     <input type="number" class="form-control">
                 </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">password</label>
-                    <input type="password" class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">conform Password</label>
-                    <input type="password" class="form-control">
-                </div>
                 <div>
-                    <input type="checkbox" />
+                    <label>
+                    <input type="checkbox"> I agree with terms & conditions</label>
+                </div>
+                <!-- <div>
+                    <input type="checkbox" /><br>
                     <label>I agree with terms & conditions</label>
-
-
+                </div> -->
+                <div class="d-flex justify-content-between">
+                    <div class="d-flex justify-content-start">
+                        <a [routerLink]="['../login']" class="btn btn-link ">Login</a>
+                    </div>
+                    <div class="d-flex justify-content-end">
+                        <a [routerLink]="['../forgot-password']" class="btn btn-link">Forgot Password?</a>
+                    </div>
                 </div>
 
                 <div class="d-flex justify-content-end">
