--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -434,6 +434,11 @@
   margin-top: 65px !important;
 }
 
+
+.m-t-70 {
+  margin-top: 70px !important;
+}
+
 .m-b-0 {
   margin-bottom: 0 !important;
 }
