--- a/src/app/views/admin-views/category-list/category-list.component.html
+++ b/src/app/views/admin-views/category-list/category-list.component.html
@@ -2,7 +2,7 @@
     <div class="card m-t-100" style="width: 70rem;">
         <div class="card-body">
             <div class="d-flex justify-content-end">
-                <button class="btn btn-primary" [routerLink]="['../category']">Add Catagory</button>
+                <button class="btn btn-primary">Add Catagory</button>
             </div>
             <div>
                 <table class="table table-striped">
