--- a/src/app/views/auth-views/forgot-password/forgot-password.component.html
+++ b/src/app/views/auth-views/forgot-password/forgot-password.component.html
@@ -2,19 +2,19 @@
     <div class="card m-t-50" style="width: 22rem;">
         <div class="card-body">
             <div class="d-flex flex-wrap  justify-content-center align-items-center">
-                <p style="font-size: medium;">Forgot Password</p>
+                <p class="custom">Forgot Password</p>
             </div>
             <form>
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Email </label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <label for="forgotEmail">Email </label>
+                    <input type="email" class="form-control" id="forgotEmail">
                 </div>
                 <div class="d-flex justify-content-between">
                     <div class="d-flex justify-content-start">
-                        <a [routerLink]="['../login']" class="btn btn-link ">Login</a>
+                        <a routerLink="/my-account/login" class="btn btn-link ">Login</a>
                     </div>
                     <div class="d-flex justify-content-start">
-                        <a [routerLink]="['../registration']" class="btn btn-link ">Registration</a>
+                        <a routerLink="/my-account/registration" class="btn btn-link ">Registration</a>
                     </div>
                 </div>
                 <div class="d-flex justify-content-end">
