--- a/src/app/views/auth-views/login/login.component.html
+++ b/src/app/views/auth-views/login/login.component.html
@@ -2,23 +2,23 @@
     <div class="card m-t-50" style="width: 22rem;">
         <div class="card-body">
             <div class="d-flex flex-wrap  justify-content-center align-items-center">
-                <p style="font-size: medium;">Login</p>
+                <p class="custom">Login</p>
             </div>
             <form>
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Email </label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <label for="loginEmail1">Email </label>
+                    <input type="email" class="form-control" id="loginEmail1">
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
+                    <label for="loginPassword">Password</label>
+                    <input type="password" class="form-control" id="loginPassword">
                 </div>
                 <div class="d-flex justify-content-between">
                     <div class="d-flex justify-content-start">
-                        <a [routerLink]="['../registration']" class="btn btn-link ">Registration</a>
+                        <a routerLink="/my-account/registration" class="btn btn-link ">Registration</a>
                     </div>
                     <div class="d-flex justify-content-end">
-                        <a [routerLink]="['../forgot-password']" class="btn btn-link">Forgot Password?</a>
+                        <a routerLink="/my-account/forgot-password" class="btn btn-link">Forgot Password?</a>
                     </div>
                 </div>
 
