--- a/src/app/views/auth-views/registration/registration.component.html
+++ b/src/app/views/auth-views/registration/registration.component.html
@@ -2,20 +2,20 @@
     <div class="card m-t-50" style="width: 22rem;">
         <div class="card-body">
             <div class="d-flex flex-wrap  justify-content-center align-items-center">
-                <p style="font-size: medium;">Registration</p>
+                <p class="custom">Registration</p>
             </div>
             <form>
                 <div class="form-group">
-                    <label for="exampleInputPassword1">Full Name</label>
-                    <input type="password" class="form-control">
+                    <label for="RegisterFulname">Full Name</label>
+                    <input type="text" class="form-control" id="RegisterFulname">
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Email </label>
-                    <input type="email" class="form-control" aria-describedby="emailHelp">
+                    <label for="registerEmail">Email </label>
+                    <input type="email" class="form-control" id="registerEmail">
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputPassword1">Phone Number</label>
-                    <input type="number" class="form-control">
+                    <label for="registerPhonenumber">Phone Number</label>
+                    <input type="number" class="form-control" id="registerPhonenumber">
                 </div>
                 <div>
                     <label>
@@ -23,10 +23,10 @@
                 </div>
                 <div class="d-flex justify-content-between">
                     <div class="d-flex justify-content-start">
-                        <a [routerLink]="['../login']" class="btn btn-link ">Login</a>
+                        <a routerLink="/my-account/login" class="btn btn-link ">Login</a>
                     </div>
                     <div class="d-flex justify-content-end">
-                        <a [routerLink]="['../forgot-password']" class="btn btn-link">Forgot Password?</a>
+                        <a [routerLink]="['/my-account/forgot-password']" class="btn btn-link">Forgot Password?</a>
                     </div>
                 </div>
 
