--- a/src/app/views/user-views/dashboard/dashboard.component.html
+++ b/src/app/views/user-views/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
     <ng-container *ngFor="let image of images ">
         <ng-template ngbSlide>
             <div class="picsum-img-wrapper">
-                <img [src]="image.img" height="560px" width="1366px" alt="Random first slide">
+                <img [src]="image.img" height="560px" width="1366px" class="custom" alt="Random first slide">
             </div>
             <div class="carousel-caption">
                 <h3>{{image.label}}</h3>
