Top bar active css classes

--- a/src/app/shared/shared/components/topbar/topbar.component.html
+++ b/src/app/shared/shared/components/topbar/topbar.component.html
@@ -9,7 +9,7 @@
       </li>
     </ul>
     <div>
-      <p class="navbar-brand pointer" [routerLink]="['/admin']"><i class="fa fa-lock" aria-hidden="true"></i>
+      <p class="navbar-brand pointer" [routerLink]="['/admin']" routerLinkActive="active"><i class="fa fa-lock" aria-hidden="true"></i>
         <span class="m-l-5 noselect" >Admin</span></p>
       <p class="navbar-brand pointer"><i class="fa fa-user" aria-hidden="true"></i>
         <span class="m-l-5 noselect">My Account</span></p>
