--- a/src/app/views/auth-views/login/login.component.html
+++ b/src/app/views/auth-views/login/login.component.html
@@ -23,7 +23,7 @@
                 </div>
 
                 <div class="d-flex justify-content-end">
-                    <button type="submit" class="btn btn-primary">login</button>
+                    <button type="submit" class="btn btn-primary">Login</button>
                 </div>
             </form>
 
