--- a/src/app/views/admin-views/category-list/category-list.component.html
+++ b/src/app/views/admin-views/category-list/category-list.component.html
@@ -5,7 +5,7 @@
                 <button class="btn btn-primary">Add Catagory</button>
             </div>
             <div>
-                <table class="table table-striped">
+                <table class="table table-striped noselect  ">
                     <thead>
                         <tr>
                             <th scope="col">Id</th>
