--- a/src/app/views/admin-views/admin-products-list/admin-modify-product/admin-modify-product.component.html
+++ b/src/app/views/admin-views/admin-products-list/admin-modify-product/admin-modify-product.component.html
@@ -1,5 +1,4 @@
 <div class="container m-t-70">
-
   <div class="d-flex justify-content-center">
     <p>Create a product</p>
   </div>
@@ -8,48 +7,74 @@
       <div class="row">
         <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <label for="name">Product Name</label>
+            <input type="name" placeholder="Enter Product Name" class="form-control" id="name">
           </div>
         </div>
         <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <label for="number">M.R.P Price</label>
+            <input type="number" placeholder="Enter M.R.P Price" class="form-control" id="number">
           </div>
         </div>
       </div>
-
-
       <div class="row">
         <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <label for=" ">Discount</label>
+            <input type="number" placeholder="Enter discount price in percentage" class="form-control" id="number">
           </div>
         </div>
         <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <label for=" ">Discount</label>
+            <input type="number" placeholder="Enter discount price in percentage" class="form-control" id="number">
           </div>
         </div>
       </div>
-
-
       <div class="row">
         <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <label for=" ">Cost</label>
+            <input type="number" placeholder="Enter cost after discount price" class="form-control" id="number">
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
+          <label>Select stock status</label>
+          <div class="form-group">
+            <div class="custom-control custom-radio custom-control-inline">
+              <input type="radio" class="custom-control-input" name="yes" mdbInput>
+              <label class="custom-control-label" for="yes">Yes</label>
+            </div>
+            <div class="custom-control custom-radio custom-control-inline">
+              <input type="radio" class="custom-control-input" name="no" mdbInput>
+              <label class="custom-control-label" for="no">No</label>
+            </div>
           </div>
         </div>
         <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <label for=" ">Quantity of stock</label>
+            <input type="number" class="form-control" placeholder="Enter number of stocks">
           </div>
         </div>
+      </div>
+      <div class="form-group">
+        <div class="upload-image">
+          <div #image class="image-wrapper"></div>
+          <div class="browse-btn">
+            <input type="file" name="cameraImg" id="cameraImg" (change)="onSelectedFile($event)" />
+            <div class="browse-image">
+              <img src="assets/images/camera.png" width="60px" />
+              <p>Browse image</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="d-flex justify-content-end action-buttons m-t-10 ">
+        <button type="button" class="btn btn-dark" [routerLink]="['/admin/products-list']">Cancel</button>
+        <button type="submit" class="btn btn-success m-l-16 ">Create</button>
       </div>
     </div>
   </div>
