--- a/src/app/views/admin-views/admin-products-list/admin-modify-product/admin-modify-product.component.scss
+++ b/src/app/views/admin-views/admin-products-list/admin-modify-product/admin-modify-product.component.scss
@@ -1,16 +1,47 @@
-.flexItems {
-    display: inline-flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-    width: 50%;
-    div{
-margin-top: 5px;
-
-    }
-    input{
-        min-width: 200px;
-        display: block;
-        padding: 0 5px;
-    }
+.image-wrapper li {
+    width: 150px;
+    height: 150px;
+    margin: 10px;
+    float: left;
+    border: 1px solid #ccc;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    cursor: default;
+    background: #fff;
+    margin-bottom: 25px;
+}
+.browse-btn {
+    box-sizing: border-box;
+    display: inline-block;
+    margin: 0.5rem;
+    position: relative;
+    width: 150px;
+    height: 150px;
+    border:1px solid #ccc;
+    text-align: center;
+}
+.browse-image {
+    position: relative;
+    top: 25%;
+}
+#cameraImg {
+    cursor: pointer;
+    opacity: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top:0;
+    bottom:0;
+    left:0;
+    right: 0;
+    z-index: 3;
+}
+.product-image{
+    width:100%;
+    height:125px;
+}
+a.delete-btn {
+    color: #f00;
+    cursor: pointer;
 }
