--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -49,8 +49,8 @@
 }
 
 /* font-sizes in px's */
-.font-size-18 {
-  font-size: 18px !important;
+.font-size-150 {
+  font-size: 150px !important;
 }
 .font-size-20 {
   font-size: 20px !important;
@@ -526,6 +526,9 @@
 
 .m-l-5 {
   margin-left: 5px !important;
+}
+.m-l-16 {
+  margin-left: 16px !important;
 }
 
 .m-l-10 {
