--- a/src/app/views/admin-views/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/views/admin-views/admin-dashboard/admin-dashboard.component.html
@@ -1,3 +1,5 @@
 <div>
     <button class="btn btn-primary" routerLink="/admin/category-list">Category list</button>
+    <button class="btn btn-primary" routerLink="/admin/products-list">Products list</button>
+
 </div>
