--- a/src/app/views/user-views/products/product-item/product-item.component.scss
+++ b/src/app/views/user-views/products/product-item/product-item.component.scss
@@ -27,3 +27,13 @@
     padding: 1px;
 
 }
+
+.comment-username {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.comment-card {
+    width: 100%;
+    background-color: #e6e6fa40;
+}
