--- a/src/app/shared/shared/components/topbar/topbar.component.html
+++ b/src/app/shared/shared/components/topbar/topbar.component.html
@@ -11,8 +11,9 @@
     <div>
       <p class="navbar-brand pointer" [routerLink]="['/admin']" routerLinkActive="active"><i class="fa fa-lock" aria-hidden="true"></i>
         <span class="m-l-5 noselect" >Admin</span></p>
-      <p class="navbar-brand pointer"><i class="fa fa-user" aria-hidden="true"></i>
-        <span class="m-l-5 noselect">My Account</span></p>
+      <p class="navbar-brand pointer" [routerLink]="['/my-account']" routerLinkActive="active" (click)="navigateToMyAccount()">
+        <i class="fa fa-user" aria-hidden="true"></i>
+        <span class="m-l-5 noselect" >My Account</span></p>
       <p class="navbar-brand pointer position-relative">
         <i class="fa fa-shopping-cart" aria-hidden="true"></i>
         <span class="m-l-5 noselect">Cart</span>
