--- a/src/app/views/user-views/products/product-item/product-item.component.html
+++ b/src/app/views/user-views/products/product-item/product-item.component.html
@@ -28,8 +28,8 @@
           <span class="p-l-10">Add to Cart</span>
         </button>
         <div class="d-flex justify-content-center cart-count">
-            {{selectedProduct?.productCount}}
-          </div>
+          {{selectedProduct?.productCount}}
+        </div>
         <button type="button" class="btn btn-primary">
           <i class="fa fa-plus"></i>
         </button>
@@ -39,4 +39,59 @@
 </div>
 <div class="container-fluid">
   <hr>
+  <div class="m-t-10 m-l-20 m-r-20">
+    <ngb-tabset #t="ngbTabset">
+      <ngb-tab id="tab-selectbyid1">
+        <ng-template ngbTabTitle><b>Description</b></ng-template>
+        <ng-template ngbTabContent>
+          <div class="m-l-20 m-r-20 m-t-10">
+            <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro
+              synth
+              master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro
+              keffiyeh
+              dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia
+              cillum
+              iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+          </div>
+        </ng-template>
+      </ngb-tab>
+      <ngb-tab id="tab-selectbyid2">
+        <ng-template ngbTabTitle><b>Reviews</b></ng-template>
+        <ng-template ngbTabContent>
+          <div class="m-l-20 m-r-20 m-t-10">
+            <div class="form-group">
+              <textarea class="form-control" id="commentBox" rows="2" placeholder="Your Comments Here"></textarea>
+            </div>
+            <div class="d-flex justify-content-end">
+              <button class="btn btn-primary">Comment</button>
+            </div>
+
+            <!-- list of comments  -->
+            <ng-container *ngFor="let userComment of comments; let i = index">
+              <div class="m-t-20 m-b-20 m-l-20 m-r-20">
+                <div class="card" [ngClass]="i % 2 === 0 ? 'comment-card': ''">
+                  <!-- <img src="..." class="card-img-top" alt="..."> -->
+                  <div class="card-body">
+                    <p class="comment-username">{{userComment.userName}}</p>
+                    <div>
+                      <p class="p-10">{{userComment.comment}}</p>
+                    </div>
+                    <div class="p-l-10 float-right">
+                      <ng-container *ngFor="let rate of [].constructor(userComment.rating)">
+                        <i class="fa fa-star" aria-hidden="true"></i> &nbsp;
+                      </ng-container>
+                      <ng-container *ngFor="let rate of [].constructor(5 - userComment.rating)">
+                        <i class="fa fa-star-o" aria-hidden="true"></i> &nbsp;
+                      </ng-container>
+                    </div>
+                  </div>
+
+                </div>
+              </div>
+            </ng-container>
+          </div>
+        </ng-template>
+      </ngb-tab>
+    </ngb-tabset>
+  </div>
 </div>
