--- a/src/app/views/admin-views/category/category.component.html
+++ b/src/app/views/admin-views/category/category.component.html
@@ -1,1 +1,20 @@
-<p>category works!</p>
+<div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Category</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <span aria-hidden="true">&times;</span>
+      </button>
+</div>
+<div class="modal-body">
+    <form>
+        <div class="form-group">
+            <label for="category">Enter Category</label>
+            <input type="email" class="form-control" id="category">
+            <div class="input-group-append">
+            </div>
+        </div>
+    </form>
+</div>
+<div class="modal-footer">
+    <button type="button" class="btn btn-dark" (click)="modal.close('Save click')">Cancel</button>
+    <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
+</div>
