--- a/src/app/views/admin-views/category/category.component.html
+++ b/src/app/views/admin-views/category/category.component.html
@@ -15,6 +15,6 @@
     </form>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-dark" (click)="modal.close('Save click')">Cancel</button>
+    <button type="button" class="btn btn-dark" (click)="modal.dismiss('Cross click')">Cancel</button>
     <button type="button" class="btn btn-primary" (click)="modal.close('Save click')">Save</button>
 </div>
