--- a/src/app/views/admin-views/admin-products-list/admin-products-list.component.html
+++ b/src/app/views/admin-views/admin-products-list/admin-products-list.component.html
@@ -2,12 +2,13 @@
   <div class="row m-b-10 action-buttons">
     <div class="col-sm-6 m-t-10">
       <form style="width: 170px">
-        <input placeholder="Search by Name or ID" [(ngModel)]="searchValue" [ngModelOptions]="{standalone: true}"
-          (keyup)="search()">
-      </form>
+        <div class="form-group form-inline">
+          <input class="form-control ml-2" placeholder="Search By Name or ID" type="text"/>
+      </div>
+          </form>
     </div>
     <div class="col-sm-6 text-right">
-      <button type="submit" class="success m-t-10" [routerLink]="['create-product']">Create Product</button>
+    <button type="button" class="btn btn-outline-primary m-t-10" [routerLink]="['create-product']">Create Product</button>
     </div>
   </div>
   <div class="table-responsive">
@@ -32,12 +33,12 @@
       </tbody>
     </table>
   </div>
-  <div class="d-flex justify-content-between p-2">
-    <ngb-pagination [collectionSize]="70" [(page)]="page" [boundaryLinks]="true"></ngb-pagination>
-    <select class="custom-select" style="width: auto" [(ngModel)]="pageSize">
+  <div class="d-flex justify-content-end  ">
+    <select class="custom-select  " style="width: auto" [(ngModel)]="pageSize">
       <option [ngValue]="2">2 items per page</option>
       <option [ngValue]="4">4 items per page</option>
       <option [ngValue]="6">6 items per page</option>
     </select>
+    <ngb-pagination [collectionSize]="70" class="m-l-16" [(page)]="page" [boundaryLinks]="true"></ngb-pagination>
   </div>
 </div>
