Implemented UI and Fixed Scroll Issue in router outlet

--- a/src/app/views/user-views/products/products.component.html
+++ b/src/app/views/user-views/products/products.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex m-t-20 justify-content-end acordian">
+<div class="d-flex justify-content-end acordian">
   <p>
     <i class="fa fa-filter" aria-hidden="true" (click)="isCollapsed = !isCollapsed" [attr.aria-expanded]="!isCollapsed"
       aria-controls="collapseExample"></i>
