--- a/src/app/shared/shared/components/topbar/topbar.component.html
+++ b/src/app/shared/shared/components/topbar/topbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg nav fixed-top">
+<nav class="navbar navbar-expand-lg nav">
   <div class="container d-flex justify-content-between w-100">
     <ul class="navbar-nav mr-auto d-flex justify-content-between">
       <li class="nav-item pointer">
