--- a/src/app/views/user-views/user-management/user-management.component.html
+++ b/src/app/views/user-views/user-management/user-management.component.html
@@ -1,11 +1,11 @@
-<div>
+<div class="">
   <div class="sidebar">
     <a routerLink="/my-account/user-management/profile" routerLinkActive="active">Profile</a>
     <a routerLink="/my-account/user-management/address-list" routerLinkActive="active">Address Management</a>
   </div>
 
   <!-- Page content -->
-  <div class="content" style="border: 1px solid black;">
+  <div class="content p-20">
     <router-outlet></router-outlet>
   </div>
 </div>
