Default checked removed.

--- a/src/app/views/user-views/user-management/profile/profile.component.html
+++ b/src/app/views/user-views/user-management/profile/profile.component.html
@@ -21,7 +21,7 @@
                 </div>
                 <div>
                     <label>Gender:
-                        <input type="radio" name="Gender" checked>Male
+                        <input type="radio" name="Gender" >Male
                     </label>
                     <label>
                         <input type="radio" name="Gender">Female
