--- a/src/app/views/admin-views/admin-products-list/admin-modify-product/admin-modify-product.component.html
+++ b/src/app/views/admin-views/admin-products-list/admin-modify-product/admin-modify-product.component.html
@@ -32,7 +32,7 @@
       <div class="row">
         <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
           <div class="form-group">
-            <label for=" ">Cost</label>
+            <label for="number ">Cost</label>
             <input type="number" placeholder="Enter cost after discount price" class="form-control" id="number">
           </div>
         </div>
