implemented gender ,firstname and lastname

--- a/src/app/views/auth-views/registration/registration.component.scss
+++ b/src/app/views/auth-views/registration/registration.component.scss
@@ -1,3 +1,13 @@
 .custom {
     font-size: medium;
 }
+
+.mydrop {
+    width: 100%;
+    color: black;
+}
+
+.size {
+    font-size: 20px;
+    height: 45px;
+}
