--- a/src/app/views/auth-views/registration/registration.component.html
+++ b/src/app/views/auth-views/registration/registration.component.html
@@ -4,10 +4,16 @@
             <div class="d-flex flex-wrap  justify-content-center align-items-center">
                 <p class="custom">Registration</p>
             </div>
+            <br>
             <form>
                 <div class="form-group">
-                    <label for="RegisterFulname">Full Name</label>
-                    <input type="text" class="form-control" id="RegisterFulname">
+
+                    <label for="registerEmail">First name </label>
+                    <input type="text" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="registerEmail"> Last name </label>
+                    <input type="text" class="form-control">
                 </div>
                 <div class="form-group">
                     <label for="registerEmail">Email </label>
@@ -17,9 +23,16 @@
                     <label for="registerPhonenumber">Phone Number</label>
                     <input type="number" class="form-control" id="registerPhonenumber">
                 </div>
+                <div class="size">
+                    <select class="btn btn-secondary" class="mydrop">
+                        <option value="">Gender</option>
+                        <option value="male">Male</option>
+                        <option value="Female">Female</option>
+                    </select>
+                </div>
                 <div>
                     <label>
-                    <input type="checkbox"> I agree with terms & conditions</label>
+                        <input type="checkbox"> I agree with terms & conditions</label>
                 </div>
                 <div class="d-flex justify-content-between">
                     <div class="d-flex justify-content-start">
@@ -29,14 +42,11 @@
                         <a [routerLink]="['/my-account/forgot-password']" class="btn btn-link">Forgot Password?</a>
                     </div>
                 </div>
-
                 <div class="d-flex justify-content-end">
                     <button type="submit" class="btn btn-primary">Register</button>
                 </div>
             </form>
 
         </div>
-
-
     </div>
 </div>
