drop down and id label created for category

--- a/src/app/views/admin-views/category/category.component.html
+++ b/src/app/views/admin-views/category/category.component.html
@@ -6,12 +6,24 @@
 </div>
 <div class="modal-body">
     <form>
-        <div class="form-group">
-            <label for="category">Enter Category</label>
-            <input type="email" class="form-control" id="category">
-            <div class="input-group-append">
-            </div>
+        <div>
+            <label for="category id">Category Id</label>
+            <input type="text" class="form-control" id="category id" placeholder="Enter The Category Id">
         </div>
+        <br>
+        <div class="form-group">
+            <label for="category">Enter Category Name</label>
+            <input type="email" class="form-control" id="category">
+        </div>
+        <div class="form-group" class="size">
+            <label>Status</label>
+            <br>
+            <select class="btn btn-secondary" class="dropdown">
+                <option value="active">Active</option>
+                <option value="inactive">Inactive</option>
+            </select>
+        </div>
+        <br>
     </form>
 </div>
 <div class="modal-footer">
