--- a/src/app/views/auth-views/registration/registration.component.html
+++ b/src/app/views/auth-views/registration/registration.component.html
@@ -23,9 +23,9 @@
                     <label for="registerPhonenumber">Phone Number</label>
                     <input type="number" class="form-control" id="registerPhonenumber">
                 </div>
-                <div class="size">
+                <div class="size" class="form-group">
                     <select class="btn btn-secondary" class="mydrop">
-                        <option value="">Gender</option>
+                        <option value="">Select Gender</option>
                         <option value="male">Male</option>
                         <option value="Female">Female</option>
                     </select>
