Registration API integated

--- a/src/assets/styles/common.css
+++ b/src/assets/styles/common.css
@@ -3,7 +3,10 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
+.error {
+  color: red;
+  font-size: 12px;;
+}
 .pointer {
   cursor: pointer;
 }
