--- a/src/app/views/auth-views/registration/registration.component.html
+++ b/src/app/views/auth-views/registration/registration.component.html
@@ -5,34 +5,47 @@
                 <p class="custom">Registration</p>
             </div>
             <br>
-            <form>
-                <div class="form-group">
-
-                    <label for="registerEmail">First name </label>
-                    <input type="text" class="form-control">
+            <form [formGroup]="registerForm" (ngSubmit)="userRegister()">
+                <div class="form-group h-px-75">
+                        <label for="registerEmail">First name </label>
+                        <input type="text" class="form-control" formControlName="firstName" required>
+                        <p class="error" *ngIf="isValidField(registerForm, 'firstName')">
+                            {{getErrorMessage(registerForm, validationMessages, 'firstName')}}
+                        </p>
                 </div>
-                <div class="form-group">
+                <div class="form-group h-px-75">
                     <label for="registerEmail"> Last name </label>
-                    <input type="text" class="form-control">
+                    <input type="text" class="form-control" formControlName="lastName" required>
+                    <p class="error" *ngIf="isValidField(registerForm, 'lastName')">
+                        {{getErrorMessage(registerForm, validationMessages, 'lastName')}}
+                    </p>
                 </div>
-                <div class="form-group">
+                <div class="form-group h-px-75">
                     <label for="registerEmail">Email </label>
-                    <input type="email" class="form-control" id="registerEmail">
+                    <input type="email" class="form-control" id="registerEmail" formControlName="email" required>
+                    <p class="error" *ngIf="isValidField(registerForm, 'email')">
+                        {{getErrorMessage(registerForm, validationMessages, 'email')}}
+                    </p>
                 </div>
-                <div class="form-group">
+                <div class="form-group h-px-75">
                     <label for="registerPhonenumber">Phone Number</label>
-                    <input type="number" class="form-control" id="registerPhonenumber">
+                    <input type="number" class="form-control" id="registerPhonenumber" formControlName="phoneNumber" required>
+                    <p class="error" *ngIf="isValidField(registerForm, 'phoneNumber')">
+                        {{getErrorMessage(registerForm, validationMessages, 'phoneNumber')}}
+                    </p>
                 </div>
-                <div class="size" class="form-group">
-                    <select class="btn btn-secondary" class="mydrop">
+                <div class="size" class="form-group h-px-75" formGroupName="gender">
+                    <select class="custom-select" formControlName="gender_id" required>
                         <option value="">Select Gender</option>
-                        <option value="male">Male</option>
-                        <option value="Female">Female</option>
+                        <option [value]="gender.gender_id" *ngFor="let gender of gendersList">{{gender.name}}</option>
                     </select>
+                    <p class="error" *ngIf="isValidField(registerForm.get('gender'), 'gender_id')">
+                        {{getErrorMessage(registerForm.get('gender'), validationMessages, 'gender_id')}}
+                    </p>
                 </div>
                 <div>
                     <label>
-                        <input type="checkbox"> I agree with terms & conditions</label>
+                        <input type="checkbox" formControlName="isTermsAndConditionsAccepted"> I agree with terms & conditions</label>
                 </div>
                 <div class="d-flex justify-content-between">
                     <div class="d-flex justify-content-start">
@@ -43,7 +56,7 @@
                     </div>
                 </div>
                 <div class="d-flex justify-content-end">
-                    <button type="submit" class="btn btn-primary">Register</button>
+                    <button type="submit" class="btn btn-primary" [disabled]="registerForm.invalid || !registerForm.get('isTermsAndConditionsAccepted').value">Register</button>
                 </div>
             </form>
 
