Implemented Default image when images is broken in profile page

--- a/src/app/views/user-views/user-management/profile/profile.component.html
+++ b/src/app/views/user-views/user-management/profile/profile.component.html
@@ -5,7 +5,7 @@
                 <div>
                     <input type="file" id="img" hidden (change)="profileChange($event)" accept=".png, .jpg, .jpeg" multiple>
                     <label for="img">
-                        <img [src]="profileImage" class="img" />
+                        <img [src]="profileImage" class="img" (error)="imgError()"/>
                     </label>
                 </div>
             </div>
