--- a/src/app/views/admin-views/category-list/category-list.component.html
+++ b/src/app/views/admin-views/category-list/category-list.component.html
@@ -1,41 +1,45 @@
  <div class="container main">
-    <div class="row m-b-10 action-buttons">
-        <div class="col-sm-6 m-t-10">
-            <form style="width: 180px">
-                <div class="form-group">
-                    <input type="text" placeholder="Search by Category or ID" class="form-control">
-                </div>
-            </form>
-        </div>
+   <div class="row m-b-10 action-buttons">
+     <div class="col-sm-6 m-t-10">
+       <form style="width: 180px">
+         <div class="form-group">
+           <input type="text" placeholder="Search by Category or ID" class="form-control">
+         </div>
+       </form>
+     </div>
 
-        <div class="col-sm-6 m-t-10 text-right ">
-            <button class="success m-t-10" class="btn btn-outline-primary" (click)="open()">Create Category</button>
-        </div>
-    </div>
-    <div class="table-responsive">
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Category</th>
-                    <th scope="col">Created By</th>
-                    <th scope="col">Updated By</th>
-                    <th scope="col">Created Date</th>
-                    <th scope="col">Updated Date</th>
-                    <th scope="col">Status</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let category of categories ">
-                    <th scope="row">{{category.id}}</th>
-                    <td>{{category.category}}</td>
-                    <td>{{category.createdby}}</td>
-                    <td>{{category.updatedby}}</td>
-                    <td>{{category.CreatedDate}}</td>
-                    <td>{{category.UpdatedDate}}</td>
-                    <td>{{category.status}}</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-</div>
+     <div class="col-sm-6 m-t-10 text-right ">
+       <button class="success m-t-10" class="btn btn-outline-primary" (click)="open()">Create Category</button>
+     </div>
+   </div>
+   <div class="table-responsive">
+     <table class="table table-hover">
+       <thead>
+         <tr>
+           <th scope="col">Id</th>
+           <th scope="col">Category</th>
+           <th scope="col">Created By</th>
+           <th scope="col">Updated By</th>
+           <th scope="col">Created Date</th>
+           <th scope="col">Updated Date</th>
+           <th scope="col">Status</th>
+         </tr>
+       </thead>
+       <tbody>
+         <tr *ngFor="let category of categories " (click)="open(category)">
+           <th>{{category.id}}</th>
+           <td>{{category.name}}</td>
+           <td>{{category.createdBy.userName}}</td>
+           <td>{{category.updatedBy.userName}}</td>
+           <td>{{category.createDate | date: 'MMM dd yyyy'}}</td>
+           <td>{{category.updatedDate | date: 'MMM dd yyyy'}}</td>
+           <td>
+             <span [ngClass]="category.active ? 'blue': 'light-grey'">
+               {{category.active ? 'Active' : 'Inactive'}}
+             </span>
+           </td>
+         </tr>
+       </tbody>
+     </table>
+   </div>
+ </div>
