--- a/src/app/views/admin-views/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/views/admin-views/admin-dashboard/admin-dashboard.component.html
@@ -1,5 +1,91 @@
-<div>
+<!-- <div>
     <button class="btn btn-primary" routerLink="/admin/category-list">Category list</button>
     <button class="btn btn-primary" routerLink="/admin/products-list">Products list</button>
+
+</div> -->
+
+<div class="container">
+
+    <!-- <div class="d-flex flex-wrap  justify-content-center align-items-center m-t-20">
+        <div class="card text-white bg-primary  cursor" routerLink="/admin/category-list" style="max-width: 18rem; margin-right: 10px;">
+            <div class="card-header">Categories</div>
+            <div class="card-body">
+              <h5 class="card-title">Active 160</h5> 
+            </div>
+          </div>
+
+          <div class="card text-white bg-success  cursor" routerLink="/admin/category-list" style="max-width: 18rem; margin-right: 10px;">
+            <div class="card-header">Categories</div>
+            <div class="card-body">
+              <h5 class="card-title">Inactive 92</h5> 
+            </div>
+          </div>
+
+          <div class="card text-white bg-danger  cursor" routerLink="/admin/products-list" style="max-width: 18rem; margin-right: 10px;">
+            <div class="card-header">Products</div>
+            <div class="card-body">
+              <h5 class="card-title">Aactive 92</h5> 
+            </div>
+          </div>
+
+          <div class="card text-white bg-warning cursor" routerLink="/admin/products-list" style="max-width: 18rem; margin-right: 10px;">
+            <div class="card-header">Products</div>
+            <div class="card-body">
+              <h5 class="card-title">Inactive 92</h5> 
+            </div>
+          </div>
+          
+    </div> -->
+    <br><br>
+
+    <div class="row">
+
+
+        <div class="col-md-6 col-sm-12 col-xs-12 col-lg-6 ">
+            <div class="card text-white bg-info mb-3 cursor" routerLink="/admin/category-list">
+                <div class="card-header text-center"><h4>Categories</h4></div>
+                
+
+                <div class="card-body">
+                    <div class="d-flex justify-content-start">
+                  <h5 class="card-title">Active <span class="count">40</span></h5> 
+                </div>
+                  <div class="d-flex justify-content-end">
+                    <h5 class="card-title">Inactive <span class="count">32</span></h5> 
+                  </div>
+               
+                </div>
+
+              </div>
+        </div>
+
+        
+
+        <div class="col-md-6 col-sm-12 col-xs-12 col-lg-6">
+            <div class="card text-white bg-primary mb-3 cursor" routerLink="/admin/products-list">
+                <div class="card-header text-center"><h4>Products</h4></div>
+                <div class="card-body">
+                    <div class="d-flex justify-content-start">
+                  <h5 class="card-title">Active <span class="count">34</span></h5> 
+                </div>
+                  <div class="d-flex justify-content-end">
+                    <h5 class="card-title">Inactive <span class="count">3</span></h5> 
+                  </div>
+               
+                </div>
+              </div>
+        </div>
+
+       
+        
+
+
+       
+
+          
+    </div>
+
+    
+
 
 </div>
