card color changed

--- a/src/app/views/admin-views/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/views/admin-views/admin-dashboard/admin-dashboard.component.html
@@ -2,9 +2,9 @@
 
 <div class="container">
 
- 
+    
 
-    <div class="row">
+    <div class="row m-t-30">
 
 
         <div class="col-md-6 col-sm-12 col-xs-12 col-lg-6 ">
@@ -28,7 +28,7 @@
         
 
         <div class="col-md-6 col-sm-12 col-xs-12 col-lg-6">
-            <div class="card text-white bg-primary mb-3 cursor" routerLink="/admin/products-list">
+            <div class="card text-white bg-green mb-3 cursor" routerLink="/admin/products-list">
                 <div class="card-header text-center"><h4>Products</h4></div>
                 <div class="card-body">
                     <div class="d-flex justify-content-start">
