--- a/src/app/views/admin-views/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/views/admin-views/admin-dashboard/admin-dashboard.component.html
@@ -14,10 +14,10 @@
 
                 <div class="card-body">
                     <div class="d-flex justify-content-start">
-                  <h5 class="card-title">Active <span class="count">40</span></h5> 
+                  <h5 class="card-title">Active <span class="count">{{count.category_active}}</span></h5> 
                 </div>
                   <div class="d-flex justify-content-end">
-                    <h5 class="card-title">Inactive <span class="count">32</span></h5> 
+                    <h5 class="card-title">Inactive <span class="count">{{count.category_inactive}}</span></h5> 
                   </div>
                
                 </div>
@@ -32,10 +32,10 @@
                 <div class="card-header text-center"><h4>Products</h4></div>
                 <div class="card-body">
                     <div class="d-flex justify-content-start">
-                  <h5 class="card-title">Active <span class="count">34</span></h5> 
+                  <h5 class="card-title">Active <span class="count">{{count.products_active}}</span></h5> 
                 </div>
                   <div class="d-flex justify-content-end">
-                    <h5 class="card-title">Inactive <span class="count">3</span></h5> 
+                    <h5 class="card-title">Inactive <span class="count">{{count.products_inactive}}</span></h5> 
                   </div>
                
                 </div>
