--- a/src/app/views/admin-views/admin-products-list/admin-modify-product/admin-modify-product.component.html
+++ b/src/app/views/admin-views/admin-products-list/admin-modify-product/admin-modify-product.component.html
@@ -3,6 +3,15 @@
     <div class="card-body">
 
       <form action="" [formGroup]="productForm" (ngSubmit)="createProduct()" >
+        <div class="row">
+          <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
+            <div class="form-group">
+              <label for="name">Product Number</label>
+              <input type="text" formControlName="id" placeholder="Enter Product Number" class="form-control" id="name">&nbsp;
+              <small *ngIf=" productForm.get('id').touched && productForm.get('id').hasError('required')" class="  text-danger">Product Number is required</small>
+            </div>
+          </div> 
+        </div>
       <div class="row">
         <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
           <div class="form-group">
@@ -48,16 +57,27 @@
           </div>
         </div>
       </div>
-      <div>
+      <div class="row">
+
+        <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
+          <label>Select Category</label>
+          <div class="form-group"> 
+               <select formControlName="categoryID" class="form-control"  name="categoryID" id="">
+                 <option value="null">None</option>
+                 <option *ngFor="let cat of categories" value="{{cat.id}}">{{cat.name}}</option> 
+               </select> 
+          </div>
+        </div>
+
         <div class="col-md-6 col-lg-6 col-sm-12 col-xs-12">
           <label>Select stock status</label>
           <div class="form-group">
             <div class="custom-control custom-radio custom-control-inline">
-              <input type="radio"  value="yes" name="isStockAvailable" formControlName="isStockAvailable"  class="custom-control-input" >
+              <input type="radio" [checked]="productForm.get('isStockAvailable').value" name="isStockAvailable" (change)="isStockAvailableChange(true)" class="custom-control-input" >
               <label class="custom-control-label" for="yes">Yes</label>
             </div>
             <div class="custom-control custom-radio custom-control-inline">
-              <input type="radio" value="no"  name="isStockAvailable" formControlName="isStockAvailable" class="custom-control-input" >
+              <input type="radio" [checked]="!productForm.get('isStockAvailable').value"   name="isStockAvailable" (change)="isStockAvailableChange(false)" class="custom-control-input" >
               <label class="custom-control-label" for="no">No</label>
             </div>
           </div>
@@ -73,12 +93,15 @@
               <p>Browse image</p>
             </div>
           </div>
-        </div>
+        </div> 
+          <ngb-alert *ngIf="imageNotif"  [type]="'success'" (close)="closeAlert('image')">Image Uploaded Successfully </ngb-alert> 
       </div>
       <hr>
       <div class="form-group">
         <label>Product Description</label>
-        <textarea class="form-control" rows="2"></textarea> 
+        <textarea class="form-control" rows="2" formControlName="description"></textarea> 
+        <p>&nbsp;</p>
+        <ngb-alert  *ngIf="serverErr"  [type]="'danger'" (close)="closeAlert('server')">{{serverErr}} </ngb-alert> 
       </div>
       <div class="d-flex justify-content-end action-buttons m-t-10 ">
         <button type="button" class="btn btn-dark" [routerLink]="['/admin/products-list']">Cancel</button>
